# dotfiles

./: .bashrc  .gitconfig  .gitignore  .lua-format  .perltidyrc  .rgignore  .tigrc  .tmux.conf  .zlogin  .zprofile  .zshenv  .zshrc  .zshrc.osx  Makefile  README.md  biome.jsonc  flake.nix  install.sh  nvfetcher.toml  renovate.json  treefmt.nix
.claude/: settings.json
.claude/rules/: workflow.md
.github/workflows/: nvfetcher.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
_sources/: generated.json  generated.nix
cargo/: config.toml  link.sh
doc/: pyproject.toml
doc/source/: 01_darwin.md  02_manjaro.md  conf.py  index.md
fish/: config.fish  fish_plug.sh
fish/actions/: alias.fish
git/: ignore  link.sh
hardware/: hhkb_initial.hks  hhkb_my.hks
home-manager/: home.nix
init/: install.sh
init/setup/: apt.sh  brew.sh  (+10 more)
lua/: .luacheckrc  init.lua
nix/: flake.nix  install.sh
nix-darwin/: default.nix
nvim/: coc-settings.json  dein.toml  dein_git.toml  dein_go.toml  dein_lazy.toml  dein_linter.toml  dein_lsp.toml  extentions.toml  frontend.toml  git.toml  hack.toml  init.vim  link.sh  mappings.vim  notlazy.toml  options.vim  package.json  utils.toml
overlays/: default.nix
private/: .gitignore  link.sh
tmux/: .tmux.conf  link.sh
tools/: link.sh
vscode/: keybindings.json  settings.json
windows-terminal/: install_link.sh  settings.json
zsh/: .zlogin  .zprofile  .zshenv  .zshrc  .zshrc.osx  install_link.sh
(+200 files in other folders)
