[project]
name = "doc"
version = "0.1.0"
description = "document"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "myst-parser>=4.0.0",
  "sphinx-rtd-theme>=3.0.1",
  "sphinx>=8.1.3",
  "sphinxcontrib-mermaid>=1.0.0",
]

[dependency-groups]
dev = ["ruff>=0.8.2", "sphinx-autobuild>=2024.10.3"]
